force-app/main/default/objects/Discount_Threshold__mdt/Discount_Threshold__mdt.object-meta.xml
<CustomObject>
    <description>Discount authority thresholds by Product Family. CRITICAL: Placeholder values - William (Revenue Ops) must confirm actual thresholds before go-live.</description>
    <label>Discount Threshold</label>
    <pluralLabel>Discount Thresholds</pluralLabel>
</CustomObject>