force-app/main/default/objects/Discount_Threshold__mdt/fields/Country_Manager_Max__c.field-meta.xml
<CustomField>
    <fullName>Country_Manager_Max__c</fullName>
    <description>Maximum discount a Country Manager can approve without escalation.</description>
    <label>Country Manager Max (%)</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>