force-app/main/default/objects/Discount_Threshold__mdt/fields/Finance_Threshold_Pct__c.field-meta.xml
<CustomField>
    <fullName>Finance_Threshold_Pct__c</fullName>
    <description>Maximum discount percentage Finance can approve. Discounts above this threshold require Group Finance or escalation per the approval matrix. Stored as a decimal (e.g. 35.00 = 35%). Maintained by Revenue Ops.</description>
    <label>Finance Threshold %</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>