force-app/main/default/objects/Discount_Threshold__mdt/fields/Is_Active__c.field-meta.xml
<CustomField>
    <fullName>Is_Active__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Set FALSE to disable without deleting.</description>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>