force-app/main/default/objects/Discount_Threshold__mdt/fields/Is_Fixed_Price__c.field-meta.xml
<CustomField>
    <fullName>Is_Fixed_Price__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates this product family has fixed pricing with no discount flexibility.</description>
    <label>Fixed Price Product</label>
    <type>Checkbox</type>
</CustomField>