force-app/main/default/objects/Discount_Threshold__mdt/fields/Ops_Manager_Threshold_Pct__c.field-meta.xml
<CustomField>
    <fullName>Ops_Manager_Threshold_Pct__c</fullName>
    <description>Maximum discount percentage an Ops Manager can approve without escalating to Finance. Stored as a decimal (e.g. 20.00 = 20%). Maintained by Revenue Ops.</description>
    <label>Ops Manager Threshold %</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>