force-app/main/default/objects/Discount_Threshold__mdt/fields/Product_Family__c.field-meta.xml
<CustomField>
    <fullName>Product_Family__c</fullName>
    <description>Product Family this threshold row applies to. Must match the Product2.Family picklist value. Use &apos;Default&apos; for a catch-all row that applies when no product-family-specific row exists.</description>
    <label>Product Family</label>
    <length>255</length>
    <type>Text</type>
</CustomField>