force-app/main/default/objects/Discount_Threshold__mdt/fields/Sales_Manager_Threshold_Pct__c.field-meta.xml
<CustomField>
    <fullName>Sales_Manager_Threshold_Pct__c</fullName>
    <description>Maximum discount percentage a Sales Manager can approve without escalating to Ops Manager. Stored as a decimal (e.g. 10.00 = 10%). Maintained by Revenue Ops.</description>
    <label>Sales Manager Threshold %</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>