force-app/main/default/objects/Discount_Threshold__mdt/fields/Sales_Rep_Max__c.field-meta.xml
<CustomField>
    <fullName>Sales_Rep_Max__c</fullName>
    <description>Maximum discount a Sales Rep can approve without escalation.</description>
    <label>Sales Rep Max (%)</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>